# rust-ri

./: Cargo.toml  README.md
src/: agents.rs  cargo_toml.rs  commands.rs  main.rs  opt.rs  package_json.rs  parser.rs  runner.rs  utils.rs
